# rustblock-desktop

./: .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  DEVICE_IMPROVEMENTS.md  ERROR_BOUNDARIES_SUMMARY.md  README.md  SECURE_STORAGE_MIGRATION.md  config.example.json  create_icon.py  debug.html  device_config.example.json  index.html  package-lock.json  package.json  start.ps1  tauri.conf.json  test.html  tsconfig.json  vite.config.ts  vitest.config.ts  架构设计.md
.github/workflows/: ci.yml  release.yml
docs/: INPUT_VALIDATION.md
src/: App.tsx  App_check.tsx  main.rs  main.tsx  main_simple.rs  styles.css
src/ai/: enhanced_ai.rs  mod.rs
src/commands/: ai.rs  code_gen.rs  device.rs  device_profile.rs  enhanced_ai.rs  mod.rs  performance.rs  project.rs  serial.rs  tools.rs
src/components/: AIIcon.tsx  AISidePanel.tsx  BlocklyWorkspace.tsx  CustomSwitch.tsx  DarkModeStyles.tsx  DeviceBoardIcon.tsx  DeviceConfiguration.tsx  DeviceOperationErrorBoundary.tsx  DeviceStatusIndicator.css  DeviceStatusIndicator.tsx  ErrorBoundary.tsx  LanguageToggle.tsx  MockBackend.tsx  PageContainer.tsx  PageErrorBoundary.tsx  PerformanceMonitor.tsx  SerialMonitor.tsx  Sidebar.tsx  ThemeToggle.tsx  ToolStatus.tsx  UploadProgress.tsx
src/contexts/: DeviceContext.tsx  LocaleContext.tsx  ThemeContext.tsx
src/device/: connection_manager.rs  detector.rs  driver.rs  mod.rs  serial.rs  uploader.rs
src/examples/: InputValidationDemo.tsx
src/locales/: en-US.ts  index.ts  zh-CN.ts
src/pages/: AIPage.tsx  DebugPage.tsx  DevicesPage.tsx  EditorPage.tsx  HomePage.tsx  (+2 more)
(+23 files in other folders)
